修复配置安全与补丁导出边界